# summonsscraper

./: .gitignore  CONTAINER_SETUP.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  README.md  build-and-push-ecr.ps1  build-and-push-ghcr.ps1  build-and-push.sh  build-ecr-simple.ps1  build-ecr.ps1  main.py  pyproject.toml  test-build.ps1
.github/instructions/: .instructions.md
.github/workflows/: release.yml
infrastructure/: .gitignore  README.md  SETUP.md  check-orphaned-resources.sh  clean-slate.sh  cleanup-orphaned-eips.sh  cost-management.sh  ec2.tf  ecr.tf  iam.tf  import-resources.sh  lambda.tf  main.tf  outputs.tf  safe-apply.sh  scheduler.tf  storage.tf  terraform.tfvars.example  user_data.sh  variables.tf  vpc.tf
scripts/: build-and-push.sh  check-ec2-status.sh  check-orphaned-resources.sh  clean-slate.sh  import-resources.sh
src/core/: database.py
src/lambda_service/: Dockerfile
src/pdf-parser/: Dockerfile
src/pdf_parser/: Dockerfile  handler.py
src/summonsscraper/: database.py  model.py
src/ui/: main.py
src/webscraper/: Dockerfile  handler.py
